--- a/RT.html
+++ b/RT.html
@@ -41,6 +41,7 @@
     const FUNCTION = "https://europe-west2-ifwl-591d8.cloudfunctions.net/rtGate";
     const REDIRECT_URI = window.location.origin + window.location.pathname;
 
+    // Public URL for display only (actual access should route via backend so we can log reads)
     const RULES_URL = "https://ifwlowner.github.io/ACC-driver-classifier/s2rules.html";
 
     document.getElementById("endpointHint").textContent = FUNCTION;
@@ -66,6 +67,17 @@
       );
     }
 
+    // ✅ Open rules through backend so Firestore logging happens (rules_access collection)
+    function openRulesViaBackend() {
+      const token = localStorage.getItem("IFWL_RT_SESSION") || "";
+      if (!token) {
+        show("⚠️ Missing session. Please login again.", false);
+        return;
+      }
+      const url = FUNCTION + `?rules=1&token=${encodeURIComponent(token)}`;
+      window.open(url, "_blank", "noopener,noreferrer");
+    }
+
     function renderRulesOrEligibility(isGreen) {
       const el = document.getElementById("rulesOrEligibility");
       if (!el) return;
@@ -77,14 +89,28 @@
             <div style="margin-top:6px; color:#065f46; font-size:14px;">
               Click below to view the Season 2 Rules.
             </div>
-            <a href="${RULES_URL}"
-               target="_blank" rel="noopener noreferrer"
-               style="display:inline-block; margin-top:10px; padding:10px 14px; border-radius:12px;
-                      text-decoration:none; font-weight:800; border:1px solid #bbf7d0; background:#fff;">
+
+            <!-- IMPORTANT: This button routes via backend (rtGate?rules=1) so access can be logged -->
+            <button id="rulesBtn"
+              style="display:inline-block; margin-top:10px; padding:10px 14px; border-radius:12px;
+                     font-weight:800; border:1px solid #bbf7d0; background:#fff; color:#111; cursor:pointer;">
               📘 Season 2 Rules
-            </a>
+            </button>
+
+            <div style="margin-top:8px; font-size:12px; color:#065f46; opacity:.85;">
+              (This will open via the IFWL gateway so rule access can be tracked.)
+            </div>
+
+            <div style="margin-top:10px; font-size:12px; opacity:.7; color:#065f46;">
+              Direct link (public): <a href="${RULES_URL}" target="_blank" rel="noopener noreferrer" style="color:#065f46; font-weight:800;">${RULES_URL}</a>
+            </div>
           </div>
         `;
+
+        // Wire up button AFTER innerHTML is set
+        const btn = document.getElementById("rulesBtn");
+        if (btn) btn.addEventListener("click", openRulesViaBackend);
+
       } else {
         el.innerHTML = `
           <div style="margin-top:12px; padding:12px; border:1px solid #fecaca; background:#fff5f5; border-radius:14px;">
