--- a/RT.html
+++ b/RT.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="card">
-    <h1 style="margin:0 0 6px 0;">IFWL Season 2 Rules Access</h1>
+    <h1 style="margin:0 0 6px 0;">IFWL Season 2 Rules Access (all log ins are audited!)</h1>
     <p class="muted" style="margin:0 0 12px 0;">
       Login with Discord. To access the rules you must have <b>BOTH</b> required roles:
       <b>SIMGRIDEVENTMEMBER</b> and <b>IFWL ACTIVE RACER</b>.
