--- a/steward.html
+++ b/steward.html
@@ -429,50 +429,66 @@
     </div>
   </div>
 
-  <!-- NEW: Rules access audit logs (added below everything above) -->
-  <div style="padding:14px; padding-top:0;">
-    <div class="card" id="rulesAuditCard">
-      <div class="row" style="justify-content:space-between; align-items:flex-start;">
-        <div>
-          <div class="title" style="margin:0;">Season Rules Access Audit</div>
-          <div class="muted" id="rulesAuditSub">Shows Discord users who have opened the Season Rules via the gateway (Firestore: <code>rules_access</code>).</div>
-        </div>
-        <div class="row" style="gap:10px;">
-          <button id="rulesAuditRefreshBtn">Refresh</button>
+<style>
+  /* Rules Audit table styling (scoped to the audit card so it won't affect other tables) */
+  #rulesAuditCard .tableWrap { overflow-x:auto; }
+  #rulesAuditCard table { width:100%; border-collapse:collapse; min-width:860px; }
+  #rulesAuditCard th, #rulesAuditCard td {
+    padding:10px 12px;
+    border-bottom:1px solid #e5e7eb;
+    text-align:left;
+    font-size:13px;
+    vertical-align:top;
+  }
+  #rulesAuditCard th { font-weight:900; background:#f9fafb; }
+  #rulesAuditCard tbody tr:hover { background:#f9fafb; }
+</style>
+
+<div style="padding:14px; padding-top:0;">
+  <div class="card" id="rulesAuditCard">
+    <div class="row" style="justify-content:space-between; align-items:flex-start;">
+      <div>
+        <div class="title" style="margin:0;">Season Rules Access Audit</div>
+        <div class="muted" id="rulesAuditSub">
+          Shows Discord users who have opened the Season Rules via the gateway (Firestore: <code>rules_access</code>).
         </div>
       </div>
-
-      <div class="row" style="margin-top:10px;">
-        <div style="flex:1; min-width:240px;">
-          <label class="muted">Search (username or userId)</label>
-          <input id="rulesAuditSearch" placeholder="e.g. bobbins3425 or 6553497…" />
-        </div>
-        <div class="pill" id="rulesAuditPill">Loading…</div>
-      </div>
-
-      <div style="margin-top:10px;" class="tableWrap">
-        <table aria-label="Rules access audit table">
-          <thead>
-            <tr>
-              <th>Discord</th>
-              <th>User ID</th>
-              <th>First access</th>
-              <th>Last access</th>
-              <th>Count</th>
-              <th>Status</th>
-            </tr>
-          </thead>
-          <tbody id="rulesAuditTbody">
-            <tr><td colspan="6" class="muted">Loading…</td></tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="muted" style="margin-top:10px;">
-        Tip: This logs access only when users go through the Rules Gateway (the green button). Direct visits to GitHub rules page won’t be recorded.
+      <div class="row" style="gap:10px;">
+        <button id="rulesAuditRefreshBtn">Refresh</button>
       </div>
     </div>
+
+    <div class="row" style="margin-top:10px;">
+      <div style="flex:1; min-width:240px;">
+        <label class="muted">Search (username or userId)</label>
+        <input id="rulesAuditSearch" placeholder="e.g. bobbins3425 or 6553497…" />
+      </div>
+      <div class="pill" id="rulesAuditPill">Loading…</div>
+    </div>
+
+    <div style="margin-top:10px;" class="tableWrap">
+      <table aria-label="Rules access audit table">
+        <thead>
+          <tr>
+            <th>Discord</th>
+            <th>User ID</th>
+            <th>First access</th>
+            <th>Last access</th>
+            <th>Count</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="rulesAuditTbody">
+          <tr><td colspan="6" class="muted">Loading…</td></tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="muted" style="margin-top:10px;">
+      Tip: This logs access only when users go through the Rules Gateway (the green button). Direct visits to GitHub rules page won’t be recorded.
+    </div>
   </div>
+</div>
 
   <div class="toast" id="toast">Saved</div>
 
