--- a/steward.html
+++ b/steward.html
@@ -174,6 +174,17 @@
     .miniOk { border-color:#86efac; background:#ecfdf5; color:#065f46; font-weight:900; }
     .miniBad { border-color:#fca5a5; background:#fef2f2; color:#991b1b; font-weight:900; }
 
+    /* ===========================
+       ✅ FULL-WIDTH RULES AUDIT FIX
+       This forces the Rules Audit section to span full width even if it
+       accidentally sits inside the .wrap grid due to any HTML nesting.
+       Nothing else is removed or altered.
+       =========================== */
+    .rulesAuditFullWidth { width:100% !important; max-width:100% !important; display:block !important; }
+    .wrap .rulesAuditFullWidth { grid-column: 1 / -1 !important; }
+    .wrap #rulesAuditCard { grid-column: 1 / -1 !important; width:100% !important; max-width:100% !important; }
+    #rulesAuditCard { width:100% !important; max-width:100% !important; }
+
     @media (max-width: 980px) {
       header { flex-direction:column; align-items:stretch; }
       header .row { width:100%; }
@@ -444,7 +455,8 @@
   #rulesAuditCard tbody tr:hover { background:#f9fafb; }
 </style>
 
-<div style="padding:14px; padding-top:0;">
+<!-- ✅ ONLY ADDITION HERE: class="rulesAuditFullWidth" (nothing removed) -->
+<div style="padding:14px; padding-top:0;" class="rulesAuditFullWidth">
   <div class="card" id="rulesAuditCard">
     <div class="row" style="justify-content:space-between; align-items:flex-start;">
       <div>
