--- a/steward.html
+++ b/steward.html
@@ -1327,7 +1327,7 @@
     // Each effect has: key, label, delta, group ("add" or "sub").
     const EFFECTS = [
       // Aggravating (adds)
-      { key:"first_lap_incident", label:"First Lap Incident", delta:+0.40, group:"add", note:"Golden bullet: first lap context" },
+      { key:"first_lap_incident", label:"First corner Incident (AUTOMATICALLY SEVERE)", delta:+0.40, group:"add", note:"Golden bullet: first lap context" },
       { key:"lap1_opening_sector", label:"Lap 1 opening sector / high-density traffic", delta:+0.20, group:"add", note:"T1–T3 crowded phase" },
 
       { key:"minor_contact", label:"Minor contact – visible but negligible damage", delta:+0.10, group:"add", note:"Light tap / scrape" },
